test/scc/ext/tm/semantic-errors/021.t
void (*test())() _Transaction_safe
{
    void(*b)();
    return b;
}